# pochecker

./: .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
src/pochecker/: main.py
src/pocheker/: main.py
