[metadata]
name = Pochecker
version = 0.1.0
description ="a script to remove outdated documents' po files"
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    po
    localalayze
    localize
    outdated
    pochecker
license = MIT
url = https://github.com/mmdbaklhi/pochecker
project_urls =
    Bug Tracker = https://github.com/mmdbaklhi/pochecker/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

# entry_points
[console_scripts]
pochecker = pochecker.main:main
